fixed alignment

--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -144,5 +144,5 @@
 
 .unavailable{
     visibility: hidden;
-    background-color:red;
+
 }
